--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="text-center">
-                        <i class="fas fa-hospital" style="font-size: 12rem; color: #667eea; opacity: 0.3;"></i>
+                        <img src="gambar/02.png" alt="">
+                        
                     </div>
                 </div>
             </div>
