--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="col-lg-6 d-flex flex-column align-items-center justify-content-center text-center text-lg-start p-5 order-lg-1 hero-left-content">
                     <!-- Title Part -->
                     <div class="hero-title-part">
-                        <h1 class="text-uppercase font-weight-bold">Merasa Terbebani?</h1>
+                        <h1 class="text-uppercase font-weight-bold"><strong>Merasa Terbebani?</strong></h1>
                         <hr class="divider light my-4" />
                     </div>
                     <!-- Description and Button Part -->
@@ -92,11 +92,11 @@
                     <hr class="divider my-4">
                     <p class="text-muted mb-4">Banyak dari kita menghadapi rintangan psikologis yang dapat menghambat potensi diri. Beberapa di antaranya meliputi:</p>
                     <ul class="list-unstyled text-muted">
-                        <li><i class="fas fa-exclamation-circle text-warning me-2"></i> **Kecemasan & Depresi**: Perasaan khawatir berlebihan atau kesedihan yang berkepanjangan.</li>
-                        <li><i class="fas fa-exclamation-circle text-warning me-2"></i> **Burnout & Stres Kerja**: Kelelahan fisik dan mental akibat tuntutan profesional.</li>
-                        <li><i class="fas fa-exclamation-circle text-warning me-2"></i> **Konflik Interpersonal**: Kesulitan dalam berkomunikasi atau mempertahankan hubungan.</li>
-                        <li><i class="fas fa-exclamation-circle text-warning me-2"></i> **Ketidakpastian Karir**: Kebingungan dalam menentukan jalur profesional atau pendidikan.</li>
-                        <li><i class="fas fa-exclamation-circle text-warning me-2"></i> **Masalah Emosional Anak/Remaja**: Perubahan perilaku atau kesulitan adaptasi pada usia muda.</li>
+                        <li><i class="fas fa-exclamation-circle text-warning me-2"></i> <strong>Kecemasan & Depresi</strong>: Perasaan khawatir berlebihan atau kesedihan yang berkepanjangan.</li>
+                        <li><i class="fas fa-exclamation-circle text-warning me-2"></i> <strong>Burnout & Stres Kerja</strong>: Kelelahan fisik dan mental akibat tuntutan profesional.</li>
+                        <li><i class="fas fa-exclamation-circle text-warning me-2"></i> <strong>Konflik Interpersonal</strong>: Kesulitan dalam berkomunikasi atau mempertahankan hubungan.</li>
+                        <li><i class="fas fa-exclamation-circle text-warning me-2"></i> <strong>Ketidakpastian Karir</strong>: Kebingungan dalam menentukan jalur profesional atau pendidikan.</li>
+                        <li><i class="fas fa-exclamation-circle text-warning me-2"></i> <strong>Masalah Emosional Anak/Remaja</strong>: Perubahan perilaku atau kesulitan adaptasi pada usia muda.</li>
                     </ul>
                 </div>
             </div>
@@ -109,11 +109,11 @@
                     <hr class="divider my-4">
                     <p class="text-muted mb-4">Mengabaikan masalah psikologis dapat berdampak serius pada kualitas hidup Anda:</p>
                     <ul class="list-unstyled text-muted">
-                        <li><i class="fas fa-frown text-danger me-2"></i> **Penurunan Kualitas Hidup**: Hilangnya minat, kebahagiaan, dan semangat.</li>
-                        <li><i class="fas fa-frown text-danger me-2"></i> **Gangguan Kesehatan Fisik**: Imunitas menurun, gangguan tidur, atau masalah pencernaan.</li>
-                        <li><i class="fas fa-frown text-danger me-2"></i> **Hambatan Karir & Akademik**: Produktivitas menurun, sulit fokus, dan prestasi terganggu.</li>
-                        <li><i class="fas fa-frown text-danger me-2"></i> **Keretakan Hubungan**: Konflik yang memburuk, isolasi sosial, atau masalah keluarga.</li>
-                        <li><i class="fas fa-frown text-danger me-2"></i> **Potensi Terpendam**: Bakat dan kemampuan yang tidak dapat berkembang optimal.</li>
+                        <li><i class="fas fa-frown text-danger me-2"></i> <strong>Penurunan Kualitas Hidup</strong>: Hilangnya minat, kebahagiaan, dan semangat.</li>
+                        <li><i class="fas fa-frown text-danger me-2"></i> <strong>Gangguan Kesehatan Fisik</strong>: Imunitas menurun, gangguan tidur, atau masalah pencernaan.</li>
+                        <li><i class="fas fa-frown text-danger me-2"></i> <strong>Hambatan Karir & Akademik</strong>: Produktivitas menurun, sulit fokus, dan prestasi terganggu.</li>
+                        <li><i class="fas fa-frown text-danger me-2"></i> <strong>Keretakan Hubungan</strong>: Konflik yang memburuk, isolasi sosial, atau masalah keluarga.</li>
+                        <li><i class="fas fa-frown text-danger me-2"></i> <strong>Potensi Terpendam</strong>: Bakat dan kemampuan yang tidak dapat berkembang optimal.</li>
                     </ul>
                 </div>
             </div>
@@ -150,8 +150,8 @@
                 <div class="col-lg-6 order-lg-1">
                     <h3 class="mt-0">Visi & Misi Kami</h3>
                     <hr class="divider divider-sm my-3" />
-                    <p class="text-muted">**Visi:** Menjadi pionir dalam layanan psikologi yang inovatif dan berdampak positif bagi kesejahteraan mental masyarakat.</p>
-                    <p class="text-muted">**Misi:**</p>
+                    <p class="text-muted"><strong>Visi:</strong> Menjadi pionir dalam layanan psikologi yang inovatif dan berdampak positif bagi kesejahteraan mental masyarakat.</p>
+                    <p class="text-muted"><strong>Misi:</strong></p>
                     <ul class="list-unstyled text-muted">
                         <li><i class="fas fa-lightbulb text-warning me-2"></i> Memberikan layanan psikologi yang etis, profesional, dan relevan dengan kebutuhan zaman.</li>
                         <li><i class="fas fa-lightbulb text-warning me-2"></i> Memfasilitasi pertumbuhan dan pengembangan individu melalui asesmen dan intervensi yang tepat.</li>
@@ -207,9 +207,9 @@
                             <h3 class="card-title text-primary mb-3"><i class="fas fa-users-cog me-2"></i> Layanan untuk Industri & Organisasi</h3>
                             <p class="card-text text-muted">Kami mendukung pertumbuhan organisasi melalui:</p>
                             <ul class="list-unstyled text-muted">
-                                <li><i class="fas fa-check me-2"></i> **Asesmen Rekrutmen**: Memilih talenta terbaik yang selaras dengan visi perusahaan.</li>
-                                <li><i class="fas fa-check me-2"></i> **Pengembangan SDM**: Program pelatihan untuk meningkatkan potensi dan produktivitas karyawan.</li>
-                                <li><i class="fas fa-check me-2"></i> **Konseling Karyawan**: Dukungan psikologis untuk kesejahteraan mental di tempat kerja.</li>
+                                <li><i class="fas fa-check me-2"></i> <strong>Asesmen Rekrutmen</strong>: Memilih talenta terbaik yang selaras dengan visi perusahaan.</li>
+                                <li><i class="fas fa-check me-2"></i> <strong>Pengembangan SDM</strong>: Program pelatihan untuk meningkatkan potensi dan produktivitas karyawan.</li>
+                                <li><i class="fas fa-check me-2"></i> <strong>Konseling Karyawan</strong>: Dukungan psikologis untuk kesejahteraan mental di tempat kerja.</li>
                             </ul>
                         </div>
                     </div>
@@ -221,9 +221,9 @@
                             <h3 class="card-title text-primary mb-3"><i class="fas fa-chalkboard-teacher me-2"></i> Layanan untuk Pendidikan & Karir</h3>
                             <p class="card-text text-muted">Membantu individu merencanakan masa depan yang cerah:</p>
                             <ul class="list-unstyled text-muted">
-                                <li><i class="fas fa-check me-2"></i> **Tes Bakat & Minat**: Mengidentifikasi kekuatan dan passion untuk jalur pendidikan/karir yang optimal.</li>
-                                <li><i class="fas fa-check me-2"></i> **Bimbingan Karir**: Panduan personal untuk mencapai tujuan profesional.</li>
-                                <li><i class="fas fa-check me-2"></i> **Konseling Akademik**: Mengatasi hambatan belajar dan meningkatkan performa.</li>
+                                <li><i class="fas fa-check me-2"></i> <strong>Tes Bakat & Minat</strong>: Mengidentifikasi kekuatan dan passion untuk jalur pendidikan/karir yang optimal.</li>
+                                <li><i class="fas fa-check me-2"></i> <strong>Bimbingan Karir</strong>: Panduan personal untuk mencapai tujuan profesional.</li>
+                                <li><i class="fas fa-check me-2"></i> <strong>Konseling Akademik</strong>: Mengatasi hambatan belajar dan meningkatkan performa.</li>
                             </ul>
                         </div>
                     </div>
@@ -235,9 +235,9 @@
                             <h3 class="card-title text-primary mb-3"><i class="fas fa-hand-holding-heart me-2"></i> Layanan untuk Kesejahteraan Individu</h3>
                             <p class="card-text text-muted">Mendukung kesehatan mental dan emosional Anda secara holistik:</p>
                             <ul class="list-unstyled text-muted">
-                                <li><i class="fas fa-check me-2"></i> **Konseling Individu**: Mengelola stres, kecemasan, depresi, trauma, dan tantangan hidup lainnya.</li>
-                                <li><i class="fas fa-check me-2"></i> **Konseling Keluarga & Pasangan**: Membangun komunikasi yang sehat dan harmonis.</li>
-                                <li><i class="fas fa-check me-2"></i> **Terapi Anak & Remaja**: Penanganan isu perilaku dan emosional pada usia perkembangan.</li>
+                                <li><i class="fas fa-check me-2"></i> <strong>Konseling Individu</strong>: Mengelola stres, kecemasan, depresi, trauma, dan tantangan hidup lainnya.</li>
+                                <li><i class="fas fa-check me-2"></i> <strong>Konseling Keluarga & Pasangan</strong>: Membangun komunikasi yang sehat dan harmonis.</li>
+                                <li><i class="fas fa-check me-2"></i> <strong>Terapi Anak & Remaja</strong>: Penanganan isu perilaku dan emosional pada usia perkembangan.</li>
                             </ul>
                         </div>
                     </div>
@@ -597,6 +597,29 @@
 
     <!-- Floating "Coba Gratis" Button -->
     <a href="#paket" class="floating-coba-gratis-btn">Coba Gratis</a>
+
+    <!-- Popup Paket Pengenalan Gratis -->
+    <div id="popupGratis" class="popup-overlay">
+        <div class="popup-content">
+            <button class="close-btn" id="closePopup">&times;</button>
+            <div class="card shadow-lg border-0 rounded-4 package-card">
+                <div class="card-header bg-gradient-light text-center py-4 rounded-top-4">
+                    <h4 class="my-0 fw-normal text-primary">Paket Pengenalan</h4>
+                    <h1 class="card-title pricing-card-title text-dark">Gratis</h1>
+                </div>
+                <div class="card-body p-4">
+                    <ul class="list-unstyled mt-3 mb-4">
+                        <li><i class="fas fa-check-circle text-success me-2"></i> Konsultasi Singkat (15 Menit)</li>
+                        <li><i class="fas fa-check-circle text-success me-2"></i> Orientasi Layanan</li>
+                        <li><i class="fas fa-check-circle text-success me-2"></i> Rekomendasi Awal</li>
+                        <li><i class="fas fa-times-circle text-danger me-2"></i> Tanpa Asesmen Formal</li>
+                        <li><i class="fas fa-times-circle text-danger me-2"></i> Tanpa Laporan Detail</li>
+                    </ul>
+                    <a href="https://wa.me/6285159601400?text=Halo%20Lidan%20Psikologi,%20saya%20tertarik%20dengan%20Paket%20Pengenalan%20Gratis." class="btn btn-primary btn-block btn-lg package-btn">Dapatkan Sekarang</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
