--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="col-lg-6 d-flex flex-column align-items-center justify-content-center text-center text-lg-start p-5 order-lg-1 hero-left-content">
                     <!-- Title Part -->
                     <div class="hero-title-part">
-                        <h1 class="text-uppercase font-weight-bold"><strong>Merasa Terbebani?</strong></h1>
+                        <h1 class="text-uppercase font-weight-bold"><strong>Merasa Berbedan Berat?</strong></h1>
                         <hr class="divider light my-4" />
                     </div>
                     <!-- Description and Button Part -->
