--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="col-lg-6 d-flex flex-column align-items-center justify-content-center text-center text-lg-start p-5 order-lg-1 hero-left-content">
                     <!-- Title Part -->
                     <div class="hero-title-part">
-                        <h1 class="text-uppercase font-weight-bold"><strong>Merasa Berbedan Berat?</strong></h1>
+                        <h1 class="text-uppercase font-weight-bold"><strong>Merasa Berbeban Berat?</strong></h1>
                         <hr class="divider light my-4" />
                     </div>
                     <!-- Description and Button Part -->
@@ -458,7 +458,7 @@
                     <div class="card h-100 shadow-lg border-0 rounded-4 package-card">
                         <div class="card-header bg-gradient-primary text-white text-center py-4 rounded-top-4">
                             <h4 class="my-0 fw-normal">Paket Esensial</h4>
-                            <h1 class="card-title pricing-card-title">Mulai dari Rp. 250.000</h1>
+                            <h1 class="card-title pricing-card-title">Mulai dari Rp. 350.000</h1>
                         </div>
                         <div class="card-body p-4">
                             <ul class="list-unstyled mt-3 mb-4">
@@ -477,7 +477,7 @@
                     <div class="card h-100 shadow-lg border-0 rounded-4 package-card">
                         <div class="card-header bg-gradient-dark text-white text-center py-4 rounded-top-4">
                             <h4 class="my-0 fw-normal">Paket Komprehensif</h4>
-                            <h1 class="card-title pricing-card-title">Mulai dari Rp. 750.000</h1>
+                            <h1 class="card-title pricing-card-title">Mulai dari Rp. 950.000</h1>
                         </div>
                         <div class="card-body p-4">
                             <ul class="list-unstyled mt-3 mb-4">
