--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <img src="https://lidan-psikologi.my.id/gambar/dr-karina.jpg" class="card-img-top rounded-top-4 team-img" alt="[Foto Dr. Karina M. Brahmana]">
                         <div class="card-body p-4">
                             <h5 class="card-title text-primary mb-1">Dr. Karina M. Brahmana</h5>
-                            <p class="card-text text-muted">Psikolog Klinis & Industri</p>
+                            <p class="card-text text-muted">Psikolog  Industri & Pendidikan</p>
                             <div class="social-icons mt-3">
                                 <a href="#" class="text-secondary mx-2"><i class="fab fa-linkedin fa-lg"></i></a>
                                 <a href="#" class="text-secondary mx-2"><i class="fab fa-instagram fa-lg"></i></a>
