--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="https://lidan-psikologi.my.id/gambar/tes-lidan-psikologi4.jpg" alt="[Seseorang sedang mengikuti tes psikologi]">
+                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="gambar/permasalahan-2.jpg" alt="[Seseorang sedang mengikuti tes psikologi]">
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <h2 class="text-center text-lg-start mt-0">Tantangan Umum dalam Hidup</h2>
@@ -102,7 +102,7 @@
             </div>
             <div class="row gx-4 gx-lg-5 align-items-center mt-5">
                 <div class="col-lg-6">
-                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="https://lidan-psikologi.my.id/gambar/tes-lidan-psikologi5.jpg" alt="[Kelompok orang mengikuti seminar]">
+                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="gambar/akibat-1.jpg" alt="[Kelompok orang mengikuti seminar]">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="text-center text-lg-start mt-0">Dampak Jika Tak Segera Ditangani</h2>
@@ -136,7 +136,7 @@
             <hr class="divider my-4" />
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <img class="img-fluid rounded shadow-lg" src="https://lidan-psikologi.my.id/gambar/02.png" alt="[Ruang tunggu kantor Lidan Psikologi]">
+                    <img class="img-fluid rounded shadow-lg" src="https://lidan-psikologi.my.id/gambar/kantor-lidan.jpg" alt="[Ruang tunggu kantor Lidan Psikologi]">
                 </div>
                 <div class="col-lg-6">
                     <p class="text-muted lead">Lidan Psikologi, di bawah naungan PT Lidan Indah Abadi, adalah pusat layanan psikologi terdepan di Medan. Kami berdedikasi untuk memberikan dukungan psikologis berkualitas tinggi bagi individu, keluarga, serta sektor pendidikan dan industri.</p>
@@ -145,7 +145,7 @@
             </div>
             <div class="row gx-4 gx-lg-5 mt-5">
                 <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
-                    <img class="img-fluid rounded shadow-lg" src="https://lidan-psikologi.my.id/gambar/07.png" alt="[Bagian dalam kantor Lidan Psikologi]">
+                    <img class="img-fluid rounded shadow-lg" src="gambar/visi-misi1.jpg" alt="[Bagian dalam kantor Lidan Psikologi]">
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <h3 class="mt-0">Visi & Misi Kami</h3>
@@ -263,7 +263,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100 shadow-sm border-0 rounded-4">
-                        <img src="https://lidan-psikologi.my.id/gambar/tes-lidan-psikologi2.jpg" class="card-img-top rounded-top-4" alt="[Seseorang sedang melakukan psikotes rekrutmen]">
+                        <img src="gambar/rekrutmen-karyawan1.jpg" class="card-img-top rounded-top-4" alt="[Seseorang sedang melakukan psikotes rekrutmen]">
                         <div class="card-body text-center p-4">
                             <h4 class="card-title text-primary">Psikotes Rekrutmen</h4>
                             <p class="card-text text-muted">Solusi terpercaya untuk seleksi karyawan yang efektif dan objektif.</p>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100 shadow-sm border-0 rounded-4">
-                        <img src="https://lidan-psikologi.my.id/gambar/tes-lidan-psikologi3.jpg" class="card-img-top rounded-top-4" alt="[Seseorang sedang berkonsultasi dengan psikolog]">
+                        <img src="gambar/klinis2.jpg" class="card-img-top rounded-top-4" alt="[Seseorang sedang berkonsultasi dengan psikolog]">
                         <div class="card-body text-center p-4">
                             <h4 class="card-title text-primary">Asesmen Klinis</h4>
                             <p class="card-text text-muted">Evaluasi mendalam untuk pemahaman dan penanganan kondisi psikologis.</p>
@@ -340,7 +340,7 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100 shadow-sm border-0 rounded-4">
-                        <img src="https://lidan-psikologi.my.id/gambar/05.png" class="card-img-top rounded-top-4" alt="[Ruang konseling yang nyaman]">
+                        <img src="https://lidan-psikologi.my.id/gambar/07.png" class="card-img-top rounded-top-4" alt="[Ruang konseling yang nyaman]">
                         <div class="card-body text-center p-4">
                             <h4 class="card-title text-primary">Ruang Konseling Privat</h4>
                             <p class="card-text text-muted">Suasana tenang dan kondusif untuk sesi terapi yang efektif.</p>
@@ -349,7 +349,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100 shadow-sm border-0 rounded-4">
-                        <img src="https://lidan-psikologi.my.id/gambar/06.png" class="card-img-top rounded-top-4" alt="[Area resepsionis yang modern]">
+                        <img src="https://lidan-psikologi.my.id/gambar/02.png" class="card-img-top rounded-top-4" alt="[Area resepsionis yang modern]">
                         <div class="card-body text-center p-4">
                             <h4 class="card-title text-primary">Area Resepsionis Modern</h4>
                             <p class="card-text text-muted">Sambutan hangat dan lingkungan yang nyaman sejak kedatangan Anda.</p>
