--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- Solution Section -->
     <section class="page-section bg-primary text-white" id="solusi">
         <div class="container px-4 px-lg-5 text-center">
-            <h2 class="mb-4">Lidan Psikologi: Jalan Menuju Kesejahteraan!</h2>
+            <h2 class="mb-4">Lidan Psikologi: Solusi Masalah Anda!</h2>
             <p class="text-white-75 mb-5">Kami hadir sebagai mitra terpercaya Anda. Dengan pendekatan yang personal dan profesional, kami membantu Anda mengatasi rintangan, memahami diri, dan meraih kehidupan yang lebih bermakna.</p>
             <a class="btn btn-light btn-xl" href="#layanan">Temukan Solusi Anda</a>
         </div>
