--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="lidan-psikologi.my.id/gambar/permasalahan-2.jpg" alt="[Seseorang sedang mengikuti tes psikologi]">
+                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="https://lidan-psikologi.my.id/gambar/permasalahan-2.jpg" alt="[Seseorang sedang mengikuti tes psikologi]">
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <h2 class="text-center text-lg-start mt-0">Tantangan Umum dalam Hidup</h2>
@@ -102,7 +102,7 @@
             </div>
             <div class="row gx-4 gx-lg-5 align-items-center mt-5">
                 <div class="col-lg-6">
-                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="lidan-psikologi.my.id/gambar/akibat-1.jpg" alt="[Kelompok orang mengikuti seminar]">
+                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="https://lidan-psikologi.my.id/gambar/akibat-1.jpg" alt="[Kelompok orang mengikuti seminar]">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="text-center text-lg-start mt-0">Dampak Jika Tak Segera Ditangani</h2>
@@ -145,7 +145,7 @@
             </div>
             <div class="row gx-4 gx-lg-5 mt-5">
                 <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
-                    <img class="img-fluid rounded shadow-lg" src="lidan-psikologi.my.id/gambar/visi-misi1.jpg" alt="[Bagian dalam kantor Lidan Psikologi]">
+                    <img class="img-fluid rounded shadow-lg" src="https://lidan-psikologi.my.id/gambar/visi-misi1.jpg" alt="[Bagian dalam kantor Lidan Psikologi]">
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <h3 class="mt-0">Visi & Misi Kami</h3>
@@ -263,7 +263,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100 shadow-sm border-0 rounded-4">
-                        <img src="lidan-psikologi.my.id/gambar/rekrutmen-karyawan1.jpg" class="card-img-top rounded-top-4" alt="[Seseorang sedang melakukan psikotes rekrutmen]">
+                        <img src="https://lidan-psikologi.my.id/gambar/rekrutmen-karyawan1.jpg" class="card-img-top rounded-top-4" alt="[Seseorang sedang melakukan psikotes rekrutmen]">
                         <div class="card-body text-center p-4">
                             <h4 class="card-title text-primary">Psikotes Rekrutmen</h4>
                             <p class="card-text text-muted">Solusi terpercaya untuk seleksi karyawan yang efektif dan objektif.</p>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100 shadow-sm border-0 rounded-4">
-                        <img src="lidan-psikologi.my.id/gambar/klinis2.jpg" class="card-img-top rounded-top-4" alt="[Seseorang sedang berkonsultasi dengan psikolog]">
+                        <img src="https://lidan-psikologi.my.id/gambar/klinis2.jpg" class="card-img-top rounded-top-4" alt="[Seseorang sedang berkonsultasi dengan psikolog]">
                         <div class="card-body text-center p-4">
                             <h4 class="card-title text-primary">Asesmen Klinis</h4>
                             <p class="card-text text-muted">Evaluasi mendalam untuk pemahaman dan penanganan kondisi psikologis.</p>
