--- a/index.html
+++ b/index.html
@@ -32,27 +32,43 @@
 
     <!-- Header / Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand" href="#page-top">
-                <img src="https://lidan-psikologi.my.id/gambar/logo-psikologi.png" alt="[Logo Lidan Psikologi]" class="logo-navbar">
-                <span class="ms-2 fw-bold text-primary">Lidan Psikologi</span>
-            </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#masalah">Tantangan</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#solusi">Jalan Keluar</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#layanan">Layanan</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#psikolog">Tim Kami</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#fasilitas">Fasilitas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#paket">Paket</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#kontak">Kontak</a></li>
-                </ul>
-            </div>
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <img src="https://lidan-psikologi.my.id/gambar/logo-psikologi.png" alt="[Logo Lidan Psikologi]" class="logo-navbar">
+            <span class="ms-2 fw-bold text-primary">Lidan Psikologi</span>
+        </a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                <li class="nav-item"><a class="nav-link" href="#masalah">Tantangan</a></li>
+                <li class="nav-item"><a class="nav-link" href="#solusi">Jalan Keluar</a></li>
+                <li class="nav-item"><a class="nav-link" href="#layanan">Layanan</a></li>
+                <li class="nav-item"><a class="nav-link" href="#psikolog">Tim Kami</a></li>
+                <li class="nav-item"><a class="nav-link" href="#fasilitas">Fasilitas</a></li>
+                <li class="nav-item"><a class="nav-link" href="#paket">Paket</a></li>
+                <!-- New Education Menu with Dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEdukasi" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Edukasi
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownEdukasi">
+                        <li><a class="dropdown-item" href="gaya-belajar.html">Gaya Belajar</a></li>
+                        <li><a class="dropdown-item" href="gaya-hidup.html">Gaya Hidup</a></li>
+                        <li><a class="dropdown-item" href="gaya-interaksi-sosial.html">Gaya Interaksi Sosial</a></li>
+                        <li><a class="dropdown-item" href="gaya-pengambilan-keputusan.html">Gaya Pengambilan Keputusan</a></li>
+                        <li><a class="dropdown-item" href="kecerdasan-majemuk.html">Kecerdasan Majemuk</a></li>
+                        <li><a class="dropdown-item" href="temperamen-anak.html">Temperamen Anak</a></li>
+                        <li><a class="dropdown-item" href="temperamen-anak-anda.html">Temperamen Anak Anda</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#kontak">Kontak</a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
+
 
     <!-- Hero Section - Split Hero Layout with reorderable content -->
     <header class="masthead bg-primary text-white" id="page-top">
@@ -145,7 +161,7 @@
             </div>
             <div class="row gx-4 gx-lg-5 mt-5">
                 <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
-                    <img class="img-fluid rounded shadow-lg" src="https://lidan-psikologi.my.id/gambar/visi-misi1.jpg" alt="[Bagian dalam kantor Lidan Psikologi]">
+                    <img class="img-fluid rounded shadow-lg" src="gambar/visi-misi.jpg" alt="[Bagian dalam kantor Lidan Psikologi]">
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <h3 class="mt-0">Visi & Misi Kami</h3>
@@ -317,9 +333,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100 shadow-lg border-0 rounded-4 text-center">
-                        <img src="https://lidan-psikologi.my.id/gambar/dr-nenny-simarmata.jpg" class="card-img-top rounded-top-4 team-img" alt="[Foto Dr. Nenny Simarmata]">
+                        <img src="https://lidan-psikologi.my.id/gambar/lovely-zega.jpg" class="card-img-top rounded-top-4 team-img" alt="[Foto Lovely C. Zega, M.Sc, Psych]">
                         <div class="card-body p-4">
-                            <h5 class="card-title text-primary mb-1">Dr. Nenny Simarmata</h5>
+                            <h5 class="card-title text-primary mb-1">Lovely C. Zega, M.Sc, Psych</h5>
                             <p class="card-text text-muted">Psikolog Industri & Organisasi</p>
                             <div class="social-icons mt-3">
                                 <a href="#" class="text-secondary mx-2"><i class="fab fa-linkedin fa-lg"></i></a>
@@ -463,7 +479,7 @@
                         <div class="card-body p-4">
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li><i class="fas fa-check-circle text-success me-2"></i> Sesi Konseling Individu (1x)</li>
-                                <li><i class="fas fa-check-circle text-success me-2"></i> Pilihan 1 Jenis Tes (Bakat/Minat/Klinis Dasar)</li>
+                                <li><i class="fas fa-check-circle text-success me-2"></i> Pilihan 1 Jenis Tes (Bakat/Minat/Rekrutmen)</li>
                                 <li><i class="fas fa-check-circle text-success me-2"></i> Ringkasan Hasil Asesmen</li>
                                 <li><i class="fas fa-check-circle text-success me-2"></i> Sesi Feedback Singkat</li>
                                 <li><i class="fas fa-times-circle text-danger me-2"></i> Tanpa Dukungan Lanjutan</li>
